[workspace]
members = [
    "node",
    "runtime/common",
    "runtime/genshiro",
    "runtime/equilibrium",
    "pallets/chainbridge",
	"pallets/eq-multisig-sudo",
    "pallets/eq-margin-call",
    "pallets/eq-aggregates",
    "pallets/eq-treasury",
    "pallets/eq-whitelists",
    "pallets/eq-bailsman",
    "pallets/eq-balances",
    "pallets/eq-rate",
    "pallets/eq-session-manager",
    "pallets/eq-distribution",
    "pallets/eq-vesting",
    "pallets/eq-claim",
    "pallets/eq-lending",
    "pallets/eq-lockdrop",
    "pallets/eq-assets",
    "pallets/eq-bridge",
    "pallets/eq-dex",
    "pallets/eq-migration",
    "pallets/eq-mm-pool",
    "pallets/eq-market-maker",
    "pallets/eq-xdot-pool",
    "pallets/eq-wrapped-dot",
    "pallets/eq-staking",
    "pallets/gens-binary-opt",
    "eq-primitives",
    "eq-utils",
    "eq-xcm",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
opt-level = 3
inherits = "release"
lto = true
codegen-units = 1

[profile.dev]
debug = 0
