[workspace]
resolver = "2"

members = [
    "node",
    "runtime/common",
    "runtime/genshiro",
    "runtime/equilibrium",
    "pallets/chainbridge",
	"pallets/eq-multisig-sudo",
    "pallets/eq-margin-call",
    "pallets/eq-aggregates",
    "pallets/eq-treasury",
    "pallets/eq-whitelists",
    "pallets/eq-bailsman",
    "pallets/eq-balances",
    "pallets/eq-rate",
    "pallets/eq-session-manager",
    "pallets/eq-distribution",
    "pallets/eq-vesting",
    "pallets/eq-claim",
    "pallets/eq-lending",
    "pallets/eq-lockdrop",
    "pallets/eq-assets",
    "pallets/eq-bridge",
    "pallets/eq-dex",
    "pallets/eq-migration",
    "pallets/eq-mm-pool",
    "pallets/eq-market-maker",
    "pallets/eq-xdot-pool",
    "pallets/eq-wrapped-dot",
    "pallets/eq-staking",
    "pallets/gens-binary-opt",
    "eq-primitives",
    "eq-utils",
    "eq-xcm",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
opt-level = 3
inherits = "release"
lto = true
codegen-units = 1

[profile.dev]
debug = 0

[workspace.dependencies]
aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", package = "pallet-aura", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", package = "pallet-sudo", default-features = false }
transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", package = "pallet-transaction-payment", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false, features = ["parameterized-consensus-hook",] }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false, version = "3.0.0" }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.1.0", default-features = false }

polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
polkadot-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0", package = "staging-xcm" }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0", package = "staging-xcm-builder" }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0", package = "staging-xcm-executor" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

substrate-fixed = { git = "https://github.com/equilibrium-eosdt/substrate-fixed", branch = "scale-info-2.0.1", package = "substrate-fixed" }
financial-pallet = { git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet", branch = "release-polkadot-v1.1.0", package = "financial-pallet", default-features = false }
financial-primitives = { git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet", branch = "release-polkadot-v1.1.0", package = "financial-primitives", default-features = false }
equilibrium-curve-amm = { git = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm", branch = "release-polkadot-v1.1.0", package = "equilibrium-curve-amm", default-features = false }
equilibrium-curve-amm-rpc-runtime-api = { git = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm", branch = "release-polkadot-v1.1.0", default-features = false }