[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-primitives"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
impl-trait-for-tuples = "0.1.3"
serde = {version = "1.0.136", optional = true, features = ["derive"]}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }


[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.29"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"


[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"


[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "frame-system"

[dependencies.financial-pallet]
default-features = false
git = "ssh://git@gitlab.equilab.io/eqlab/substrate/financial-pallet.git"
branch = "polkadot-v0.9.29"
package = "financial-pallet"
version = "0.1.2"

[dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.equilibrium-curve-amm]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
branch = "polkadot-v0.9.29"
package = "equilibrium-curve-amm"
version = "0.2.3"

[dependencies.xcm-executor]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.29"

[dependencies.smallvec]
version = "1.8.0"
features = ["serde"]

[dev-dependencies.criterion]
version = "0.3.5"

[dev-dependencies.rand]
version = "0.8.5"

[features]
default = ["std"]
production = []
std = [
  "polkadot-core-primitives/std",
  "log/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "financial-pallet/std",
  "sp-arithmetic/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "serde",
  "financial-pallet/std",
  "xcm/std",
  "equilibrium-curve-amm/std",
  "xcm-executor/std",
  "polkadot-parachain/std"
]

runtime-benchmarks = []

[[bench]]
name = "map"
harness = false