[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-primitives"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.1.3"
serde = { version = "1.0.188", default-features = false, features = ["alloc", "derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
frame-support = {workspace = true}
substrate-fixed = { workspace = true }
financial-pallet = { workspace = true }
xcm = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
equilibrium-curve-amm = { workspace = true }
xcm-executor = { workspace = true }
smallvec = { version = "1.8.0", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.3.5" }
rand = { version = "0.8.5" }

[features]
default = ["std"]
production = []
std = [
  "polkadot-core-primitives/std",
  "log/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "financial-pallet/std",
  "sp-arithmetic/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "serde/std",
  "financial-pallet/std",
  "xcm/std",
  "equilibrium-curve-amm/std",
  "xcm-executor/std",
  "polkadot-parachain-primitives/std"
]

runtime-benchmarks = []

[[bench]]
name = "map"
harness = false