[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-utils"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
substrate-fixed = { workspace = true }
xcm = { workspace = true }
sp-io = { workspace = true }
equilibrium-curve-amm = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", default-features = false, features = ["derive"] }
eq-primitives = { path = "../eq-primitives", default-features = false }

[features]
default = ["std"]
std = [
    "eq-primitives/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "substrate-fixed/std",
    "xcm/std",
    "equilibrium-curve-amm/std",
    "codec/std",
]

logging = []
