[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-xcm"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
smallvec = "1.6.1"
hex-literal = "0.3.1"
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full"] }
log = { version = "0.4.0", default-features = false }
frame-support = {workspace = true}
xcm = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
cumulus-primitives-core = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
pallet-staking = { workspace = true }
eq-primitives = { path = "../eq-primitives", default-features = false }
eq-utils = { path = "../eq-utils", default-features = false }

[dependencies.sp-trie]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dependencies.sp-state-machine]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
kusama = []
std = [
    "log/std",
    "codec/std",
    "frame-system/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-staking/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-trie/std",
    "sp-state-machine/std",
    "xcm/std",
    "xcm-executor/std",
    "xcm-builder/std",
    "cumulus-primitives-core/std",
    "eq-primitives/std",
    "eq-utils/std",
]
